Removing mistakes and applying feedbacks

--- a/homepage/projects/qr-code-component.html
+++ b/homepage/projects/qr-code-component.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="qr-code-component-main/images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/qr-code.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
+    <link rel="icon" type="image/png" sizes="32x32" href="qr-code-component-main/images/favicon-32x32.png">
+    <link rel="stylesheet" href="qr-code-component-main/qr-code.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
 
-  <title>Frontend Mentor | QR code component</title>
+    <title>Frontend Mentor | QR code component</title>
 
-</head>
-<body>
-  <div class="card">
-    <img src="qr-code-component-main/images/image-qr-code.png" alt="">
-    <h2><b>Improve your front-end <br> skills by building projects</b></h2>
-    <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
-  </div>
+  </head>
+  <body>
+    <section class="card">
+      <img src="qr-code-component-main/images/image-qr-code.png" alt="">
+      <h1><b>Improve your front-end <br> skills by building projects</b></h1>
+      <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
+    </section>
 
-  <div class="attribution">
-    <div class="attribleft">
-      <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
-      <p class="phone">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
-        <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+    <div class="attribution">
+      <div class="attribleft">
+        <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+        <p class="phone">Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank"> Frontend Mentor</a>. 
+          <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+      </div>
+      <div class="attribright">
+        <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
+      </div>
     </div>
-    <div class="attribright">
-      <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
