--- a/homepage/projects/product-preview-card-component.html
+++ b/homepage/projects/product-preview-card-component.html
@@ -29,13 +29,13 @@
     </section>
   </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     <div>
       <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa" target="_blank"> Frontend Mentor</a>. 
       Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
     </div>
 
     <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
-  </div>
+  </footer>
 </body>
 </html>
