Preload - Turning off

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
 
-    <div class="preload">
+    <!-- <div class="preload">
       <span id="floatingText" style="--i:1">L</span>
       <span id="floatingText" style="--i:2">o</span>
       <span id="floatingText" style="--i:3">a</span>
@@ -51,7 +51,7 @@
       <span id="floatingText" style="--i:8">.</span>
       <span id="floatingText" style="--i:9">.</span>
       <span id="floatingText" style="--i:10">.</span>
-    </div>
+    </div> -->
 
     <header>
         <!--TODO: For Computer -->
@@ -135,14 +135,14 @@
           <div class="caption">
             <p>New Content Undergoing</p>
           </div>
-          <a href="error_page.html"><img class="thumbnail" src="css/underconstruction.png" alt=""></a>
+          <a href="projects/product-preview-card-component.html"><img class="thumbnail" src="projects/product-preview-card-component-main/images/preview-product.jpg" alt=""></a>
         </figure>
 
         <figure class="card">
           <div class="caption">
             <p>Newpage using Flexbox</p>
           </div>
-          <a href="projects/news-homepage-main.html"><img class="thumbnail" src="pics/project/newspage.jpg" alt=""></a>
+          <a href="projects/news-homepage-main.html"><img class="thumbnail" src="projects/news-homepage-main/assets/images/newspage.jpg" alt=""></a>
         </figure>
 
         <figure class="card">
