Adding NGL Link - question

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -88,10 +88,12 @@
     <div id="panels">
       <div id="comPanels">
         <button type="button" onclick="openProjects1()" style="color: #000;"><span id="ambot"></span>Information</button>
+        <button type="button" onclick="question()" style="color: #000;"><span id="ambot"></span>Ask a question!</button>
       </div>
   
       <div id="phonePanels">
-        <button type="button" onclick="openProjects2()" style="color: #000;"><span id="ambot"></span>Information</button>
+        <button type="button" style="color: #000;"><span id="ambot"></span>Information</button>
+        <button type="button" onclick="question()" style="color: #000;"><span id="ambot"></span>Ask a question!</button>
       </div>
     </div>
 
@@ -346,6 +348,10 @@
 
     </footer>
   </body>
+    <!-- NGL Link -->
+  <script>
+    function question() {location.href = "http://ngl.link/kshn.shrills_0w0";}
+  </script>
     <!-- Side Navigation: when the screen does into phone version -->
   <script>
     function openNav() {
