--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="password" name="pswrd" placeholder="Password" required>
         <button type="sumbit" onclick="check(form)" name="login" class="login login-submit" value="Login">Login</button>
       </form>
-      <button onclick="check(form)" id="guestButton" class="login login-submit" value="Enter as Guest">Enter as Guest</button>
+      <button id="guestButton" class="login login-submit" value="Enter as Guest">Enter as Guest</button>
       <p></p>
       <div class="login-help">
         <a href="account_register.html">Register</a> • <a href="account_forgot-password.html">Forgot Password</a>
