--- a/homepage/projects/nft-preview-card-component.html
+++ b/homepage/projects/nft-preview-card-component.html
@@ -38,9 +38,13 @@
       </div>
     </section>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <footer class="attribution">
+      <div>
+        <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank"> Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
+      </div>
+  
+      <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
+    </footer>
   </body>
 </html>
