Loading back Preload, adding new project link

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>
 
-    <!-- <div class="preload">
+    <div class="preload">
       <span id="floatingText" style="--i:1">L</span>
       <span id="floatingText" style="--i:2">o</span>
       <span id="floatingText" style="--i:3">a</span>
@@ -52,7 +52,7 @@
       <span id="floatingText" style="--i:8">.</span>
       <span id="floatingText" style="--i:9">.</span>
       <span id="floatingText" style="--i:10">.</span>
-    </div> -->
+    </div>
 
     <header id="header">
         <!--TODO: For Computer -->
@@ -205,6 +205,32 @@
         </div>
         <div class="tags">
           <a href="error_page.html">Visit</a>
+          <a href="#">css</a>
+        </div>
+      </article>
+
+
+      <article class="card">
+        <header class="card-header">
+          <p>Dec 2, 2022</p>
+          <h2>NFT Preview Card Component</h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="#">
+            <img src="icons/Streamlineicons-Streamline-Ux-Free-Hacker.ico" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Website</div>
+            Frontend Mentor
+          </div>
+        </div>
+        <div class="tags">
+          <a href="./projects/nft-preview-card-component.html">Visit</a>
           <a href="#">css</a>
         </div>
       </article>
