--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </footer>
   <script>
     document.getElementById("guestButton").onclick = function () {
-      location.href = "homepage/index.html";
+      location.href = "homepage/hompage.html";
     };
   </script>
 </html>
