--- a/homepage/projects/cat.html
+++ b/homepage/projects/cat.html
@@ -11,7 +11,7 @@
       <section>
         <h2>Cat Photos</h2>
         <!-- TODO: Add link to cat photos -->
-        <p>Click here to go back <a target="_blank" href="../index.html">Home!</a>.</p>
+        <p>Click here to go back <a target="_blank" href="../homepage.html">Home!</a>.</p>
         <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
       </section>
       <section class="st-line">
