--- a/homepage/projects/nft-preview-card-component.html
+++ b/homepage/projects/nft-preview-card-component.html
@@ -44,7 +44,7 @@
         Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
       </div>
   
-      <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
+      <p class="web">Go back <a href="../homepage.html" target="_blank"> Home</a>.</p>
     </footer>
   </body>
 </html>
