--- a/homepage/projects/qr-code-component.html
+++ b/homepage/projects/qr-code-component.html
@@ -26,7 +26,7 @@
           <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
       </div>
       <div class="attribright">
-        <p class="web">Go back <a href="../index.html" target="_blank"> Home</a>.</p>
+        <p class="web">Go back <a href="../homepage.html" target="_blank"> Home</a>.</p>
       </div>
     </div>
   </body>
