--- a/homepage/projects/nft-preview-card-component.html
+++ b/homepage/projects/nft-preview-card-component.html
@@ -45,6 +45,7 @@
       </div>
   
       <p class="web">Go back <a href="../homepage.html" target="_blank"> Home</a>.</p>
+      <p class="phone">Go back <a href="../homepage.html" target="_blank"> Home</a>.</p>
     </footer>
   </body>
 </html>
