Survey Form project

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -197,6 +197,32 @@
 
       <article class="card">
         <header class="card-header">
+          <p>Dec 5, 2022</p>
+          <h2>Making a Survey Form by freeCodeCamp's guidance</h2>
+        </header>
+
+        <div class="card-author">
+          <a class="author-avatar" href="#">
+            <img src="icons/Streamlineicons-Streamline-Ux-Free-Hacker.ico" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Website</div>
+            FreeCodeCamp
+          </div>
+        </div>
+        <div class="tags">
+          <a href="./projects/surveyform.html">Visit</a>
+          <a href="#">css</a>
+        </div>
+      </article>
+
+
+      <article class="card">
+        <header class="card-header">
           <p>Dec 2, 2022</p>
           <h2>NFT Preview Card Component</h2>
         </header>
@@ -405,8 +431,6 @@
       closeNavInstant();
     }
   </script>
-
-
     <!--? Computer Version -->
   <script>
     function openProjects1() {
