Correcting Atrib Position - Card phone ver project

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -159,13 +159,13 @@
     <section id="projectinfo">
       <div>
         <h1>Projects</h1>
-        <p>Just some website challenges I do in my spare time when bored or lazy.</p>
+        <p class="web">Just some website challenges I do in my spare time when bored or lazy.</p>
       </div>
-      <div id="exitbutton"><a href="#header">X</a></div>
+      <div id="exitbutton"><a href="#header"><p>X</p></a></div>
     </section>
 
     <!--? This is my Project page -->
-    <!--TODO: Update according to recent project made -->
+    <!--TODO: Update the website version - projects -->
     <section class="card-list" id="projects">
       
 
@@ -379,6 +379,86 @@
         </div>
       </article>
 
+    </section>
+
+    <!--TODO: Update the phone version - projects -->
+    <section class="articles phone">
+      <div class="longCard">
+        <a href="./projects/surveyform.html">
+          <img src="./projects/images/Screenshot 2022-12-06 070757.jpg" alt="Survey Phone Website">
+        </a>
+        <div>
+          <h1>07</h1>
+          <a href="./projects/surveyform.html"><h2>Survey Form</h2></a>
+          <p>freeCodeCamp guide on making a survey form made with flexbox.</p>
+        </div>
+      </div>
+
+      <div class="longCard">
+        <a href="./projects/nft-preview-card-component.html">
+        <img src="./projects/nft-preview-card-component-main/design/desktop-design.jpg" alt="NFT Preview Card">
+        </a>
+        <div>
+          <h1>06</h1>
+          <a href="./projects/nft-preview-card-component.html"><h2>NFT Preview Card</h2></a>
+          <p>Made using flexbox and box-sizing.</p>
+        </div>
+      </div>
+
+      <div class="longCard">
+        <a href="./projects/news-homepage-main.html">
+        <img src="./projects/news-homepage-main/assets/images/newspage.jpg" alt="">
+        </a>
+        <div>
+          <h1>05</h1>
+          <a href="./projects/news-homepage-main.html"><h2>Newspage</h2></a>
+          <p>Made using flexbox and font-size into rem.</p>
+        </div>
+      </div>
+
+      <div class="longCard">
+        <a href="./projects/product-preview-card-component.html">
+        <img src="./projects/product-preview-card-component-main/design/desktop-design.jpg" alt="">
+        </a>
+        <div>
+          <h1>04</h1>
+          <a href="./projects/product-preview-card-component.html"><h2>Product Card</h2></a>
+          <p>Assignment from FrontEnd Mentor and made using flexbox.</p>
+        </div>
+      </div>
+
+      <div class="longCard">
+        <a href="./projects/qr-code-component.html">
+        <img src="./projects/qr-code-component-main/design/desktop-design.jpg" alt="">
+        </a>
+        <div>
+          <h1>03</h1>
+          <a href="./projects/qr-code-component.html"><h2>QR Code Component</h2></a>
+          <p>Assignment from FrontEnd Mentor and made using flexbox.</p>
+        </div>
+      </div>
+
+      <div class="longCard">
+        <a href="./projects/coffee_menu.html">
+        <img src="./pics/project/coffee_menu.jpg" alt="">
+        </a>
+        <div>
+          <h1>02</h1>
+          <a href="./projects/coffee_menu.html"><h2>Coffee Menu</h2></a>
+          <p>freeCodeCamp guide on making a Coffee Menu made with flexbox.</p>
+        </div>
+      </div>
+
+      <div class="longCard">
+        
+        <img src="./pics/project/cats.jpg" alt="">
+        </a>
+        <div>
+          <h1>01</h1>
+          <a href="./projects/cat.html"><h2>Page about Cats</h2></a>
+          <p>freeCodeCamp guide on making a page about cats - static web</p>
+        </div>
+      </div>
     </section>
 
     <!--TODO: No Attrib yet -->
