--- a/homepage/projects/qr-code-component.html
+++ b/homepage/projects/qr-code-component.html
@@ -18,16 +18,14 @@
       <p>Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>
     </section>
 
-    <div class="attribution">
-      <div class="attribleft">
-        <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+    <footer class="attribution">
+      <div>
+        <p class="web">Challenge by <a class="mentor" href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank"> Frontend Mentor</a>. 
         Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
-        <p class="phone">Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H" target="_blank"> Frontend Mentor</a>. 
-          <br> Coded by <a href="https://github.com/KishonShrill"> Chriscent Pingol</a>.</p>
       </div>
-      <div class="attribright">
-        <p class="web">Go back <a href="../homepage.html" target="_blank"> Home</a>.</p>
-      </div>
-    </div>
+  
+      <p class="web">Go back <a href="../homepage.html" target="_blank"> Home</a>.</p>
+      <p class="phone"> Go back<a href="../homepage.html" target="_blank"> Home</a>.</p>
+    </footer>
   </body>
 </html>
