--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -573,4 +573,10 @@
   </script>
 
   <script id="dsq-count-scr" src="//kishonshrill.disqus.com/count.js" async></script>
+  
+  <script>
+    var disqus_config = function () {
+      this.callbacks.onNewComment = [function() { DISQUSWIDGETS.getCount({reset: true}); }];
+    };
+  </script>
 </html>
