learning with grid - no content yet

--- a/homepage/about.html
+++ b/homepage/about.html
@@ -11,7 +11,7 @@
   </head>
   <body>
  
-    <!-- Modal -->
+    <!-- Modal
     <div id="myModal" class="bg-modal">
       <div class="modal-content">
         <div class="close"></div>
@@ -28,16 +28,69 @@
           <h2>SORRY!  SORRY!  SORRY!  SORRY!  SORRY!  SORRY!  SORRY!  SORRY! SORRY! SORRY!<h2>
         </footer>
       </div>
-    </div>          
+    </div>           -->
 
-    <!-- This is the first slide -->
-    <div id="block1-left">Okay</div>
-    <div id="block1-right">Okay</div>
-    <div id="block2-left">Okay</div>
-    <div id="block2-right">Go to <a href="#block3">page 2</a></div>
+    <main class="mainContainer">
+      <article class="blocks pad1 grid-col-span-across">
+        <div class="heading">
+          <img src="./images/Earth.png" alt="">
+          <div class="title">
+            <h1>Author 1</h1>
+            <p>Additional Title</p>
+          </div>         
+        </div>
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium magnam quas ipsam ullam aliquid unde dolorum odio similique cupiditate? Veritatis eius delectus deleniti ipsa, laborum vitae repellendus laboriosam ea fugiat. Voluptas doloribus officiis error aperiam veritatis!</p>
+      </article>
 
-    <!-- This is now the second slide -->
-    <div id="block3">Go <a href="#block1-left">back</a></div>
+      <article class="blocks pad2">
+        <div class="heading">
+          <img src="./images/Earth.png" alt="">
+          <div class="title">
+            <h1>Author 2</h1>
+            <p>Additional Title</p>
+          </div>         
+        </div>
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium magnam quas ipsam ullam aliquid unde dolorum odio similique cupiditate? Veritatis eius delectus deleniti ipsa, laborum vitae repellendus laboriosam ea fugiat. Voluptas doloribus officiis error aperiam veritatis!</p>
+      </article>
+
+      <article class="blocks pad3">
+        <div class="heading">
+          <img src="./images/Earth.png" alt="">
+          <div class="title">
+            <h1>Author 3</h1>
+            <p>Additional Title</p>
+          </div>         
+        </div>
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. totam et reiciendis, corporis placeat.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium magnam quas ipsam ullam aliquid unde dolorum odio similique cupiditate? Veritatis eius delectus deleniti ipsa, laborum vitae repellendus laboriosam ea fugiat. Voluptas doloribus officiis error aperiam veritatis!</p>
+      </article>
+
+      <article class="blocks pad4 grid-col-span-across">
+        <div class="heading">
+          <img src="./images/Earth.png" alt="">
+          <div class="title">
+            <h1>Author 4</h1>
+            <p>Additional Title</p>
+          </div>         
+        </div>
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. et reiciendis, corporis placeat.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium magnam quas ipsam ullam aliquid unde dolorum odio similique cupiditate? Veritatis eius delectus deleniti ipsa, laborum vitae repellendus laboriosam ea fugiat. Voluptas doloribus officiis error aperiam veritatis!</p>
+      </article>
+
+      <article class="blocks pad5">
+        <div class="heading">
+          <img src="./images/Earth.png" alt="">
+          <div class="title">
+            <h1>Author 5</h1>
+            <p>Additional Title</p>
+          </div>         
+        </div>
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. corporis placeat.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium magnam quas ipsam ullam aliquid unde dolorum odio similique cupiditate? Veritatis eius delectus deleniti ipsa, laborum vitae repellendus laboriosam ea fugiat. Voluptas doloribus officiis error aperiam veritatis!</p>
+      </article>
+    </main>
 
   </body>
   <footer>
