Making a game using html

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/sidenav.css">
-    <link rel="stylesheet" href="css/preload.css">
-    <link rel="stylesheet" href="css/homepage/card.css">
-    <link rel="stylesheet" href="css/homepage/scrollbar.css">
+    <title>Chriscent's Portfolio -  Projects made with my Freetime after School</title>
     <link rel="icon" type="image/png" sizes="64x64" href="images/Earth.png">
 
-    <title>Chriscent's Portfolio -  Projects made with my Freetime after School</title>
+    <link rel="stylesheet" href="css/homepage/index.css">
+    <link rel="stylesheet" href="css/homepage/card.css">
+    <link rel="stylesheet" href="css/homepage/scrollbar.css">
+    <link rel="stylesheet" href="css/sidenav.css">
+    <link rel="stylesheet" href="css/preload.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/31dfec9376.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script>
     $(document).ready(function(){
       // Add smooth scrolling to all links
@@ -418,6 +420,17 @@
 
     <!--TODO: Update the phone version - projects -->
     <section class="articles phone">
+      <div class="longCard">
+        <a href="./game.html">
+          <img src="./projects/images/GameSnapshot.jpg" alt="Survey Phone Website">
+        </a>
+        <div>
+          <h1>08</h1>
+          <a href="./projects/surveyform.html"><h2>Game - On Progress</h2></a>
+          <p>Making a Game with JavaScript; Game on progress!!!</p>
+        </div>
+      </div>
+      
       <div class="longCard">
         <a href="./projects/surveyform.html">
           <img src="./projects/images/Screenshot 2022-12-06 070757.jpg" alt="Survey Phone Website">
